--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/poison"]
 	path = themes/poison
 	url = https://github.com/lukeorth/poison
+[submodule "public"]
+	path = public
+	url = git@github.com:debojitkumardas/debojitkumardas.github.io.git
